[package]
name = "socks5-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
bytes = "1.4.0"
tokio = { version = "1.27.0", features = ["io-util", "net", "rt-multi-thread", "macros"] }
inttype-enum = "0.1.0"
