[package]
name = "socks5-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
bytes = "1.9"
tokio = { version = "1.42", features = ["io-util", "net", "rt-multi-thread", "macros"] }
inttype-enum = "0.1"


[patch.crates-io]
# inttype-enum = {path="../inttype-enum"}