[package]
name = "socks5-server"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0"
byteorder = "1.5"
bytes = "1.10"
tokio = { version = "1.44", features = ["io-util", "net", "rt-multi-thread", "macros"] }
inttype-enum = "0.2"


[patch.crates-io]
# inttype-enum = {path="../inttype-enum"}